--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			
 			<h1 class="h1">
 					<a href="#">Smashing HTML5!
-				<span>HTML5 in the year <s>2022</s> <u>2018</u></span>
+				<span>ROMA MOLODEC <s>2022</s> <u>2018</u></span>
 			</a>
 			</h1>
 		</header>
